--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "dependencies": {
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "node": "^18.7.0",
+    "recordrtc": "^5.6.2",
     "y": "^0.3.2"
+  },
+  "scripts": {
+    "start": "nodemon server.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
